// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<section
  class="ant-layout emotion-0"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Render default - value[0] 1`] = `
<section
  class="ant-layout emotion-0"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  border: 1px solid blue;
}

<section
  class="ant-layout emotion-0"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Render required = true areas.content - value[0] 1`] = `
<section
  class="ant-layout emotion-0"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Render required = true default - value[0] 1`] = `
<section
  class="ant-layout emotion-0"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  border: 1px solid blue;
}

<section
  class="ant-layout emotion-0"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</section>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
